# TasteMaker_code

./: .gitignore  Pipfile  README.md  base_page.py  conftest.py  docker-compose.yml  locators.py  login_page.py  pyproject.toml  test_login_page.py  test_registration_page.py
autotests/: test_auth_page.py  test_registration_page.py
autotests/pages/: authorization_page.py  base_page.py  locators.py  registration_page.py  variables.py
autotests/tests/: test_auth_page.py  test_registration_page.py
backend_api/: .env  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  fixture-ingredients.json  fixture-measures.json  fixtures.json  pyproject.toml  start-web.sh
backend_api/backend_api/: settings.py  swagger.py  urls.py
backend_api/docs/: installation.md  recipes.md  tokens.md  users.md
backend_api/recipes/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
backend_api/recipes/migrations/: 0001_initial.py
backend_api/services/: services.py
backend_api/users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend_api/users/migrations/: 0001_initial.py
frontend/: .eslintrc.cjs  .prettierrc  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: CustomLink.tsx  Layout.tsx
frontend/src/hooks/: useAuth.ts  useInput.ts  useValidation.ts
frontend/src/http/: index.ts
frontend/src/models/: validations.ts
frontend/src/pages/: HomePage.tsx  LoginPage.tsx  (+2 more)
pages/: locators.py  registration_page.py  test_login_page.py  variables.py
(+43 files in other folders)
