[tool.poetry]
name = "tastemaker-code"
version = "0.1.0"
description = ""
authors = ["Auleksis <auleks.red@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
djangorestframework = "^3.14.0"
django-email-users = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
